y.output
   0  $accept : program $end

   1  program : main_body

   2  main_body : main_specification IS declarative_part_sequence BEG sequence_of_statements exception_part END ';'

   3  main_specification : PROCEDURE ID

   4  procedure_body : procedure_specification IS declarative_part_sequence BEG sequence_of_statements exception_part END ';'

   5  procedure_specification : PROCEDURE ID formal_parameter_part

   6  formal_parameter_part : '(' parameters ')'
   7                        |

   8  parameters : identifier_list ':' mode type_name ';' parameters
   9             | identifier_list ':' mode type_name

  10  identifier_list : ID
  11                  | ID ',' identifier_list

  12  mode : IN
  13       | OUT
  14       | IN OUT
  15       |

  16  type_name : ID

  17  declarative_part_sequence : declarative_part procedure_sequence

  18  procedure_sequence : procedure_body procedure_sequence
  19                     |

  20  declarative_part : decl ';' declarative_part
  21                   |

  22  decl : array_type_definition
  23       | record_type_definition
  24       | name_type_definition
  25       | variable_declaration
  26       | constant_variable_declaration
  27       | exception_type_definition

  28  array_type_definition : TYPE ID IS ARRAY '(' constant_option DOTDOT constant_option ')' OF type_name

  29  constant_option : ID
  30                  | NUMBER

  31  constant_expression : NUMBER

  32  record_type_definition : TYPE ID IS RECORD component_list ENDREC

  33  component_list : variable_declaration ';' component_list
  34                 | variable_declaration ';'

  35  variable_declaration : identifier_list ':' type_name

  36  name_type_definition : TYPE ID IS RANGE constant_option DOTDOT constant_option

  37  constant_variable_declaration : identifier_list ':' CONSTANT DERIVES constant_expression

  38  exception_type_definition : identifier_list ':' EXCEPTION

  39  sequence_of_statements : statement_type sequence_of_statements
  40                         |

  41  statement_type : NULLWORD ';'
  42                 | assignment_statement ';'
  43                 | procedure_call ';'
  44                 | loop_statement ';'
  45                 | if_statement ';'
  46                 | raise_exception ';'
  47                 | expression ';'

  48  assignment_statement : ID DERIVES expression

  49  procedure_call : ID optional_actual_parameter_part

  50  loop_statement : LOOP sequence_of_statements loop_exit ENDLOOP

  51  loop_exit : EXIT ';'
  52            | EXITWHEN expression ';'
  53            |

  54  if_statement : IF expression THEN sequence_of_statements if_more ENDIF

  55  if_more : ELSEIF expression THEN sequence_of_statements if_more
  56          | ELSE sequence_of_statements
  57          |

  58  raise_exception : RAISE ID

  59  expression : relation boolean_operator_list

  60  boolean_operator_list : boolean_operator relation boolean_operator_list
  61                        |

  62  relation : simple_expression relational_operator_list

  63  relational_operator_list : relational_operator simple_expression relational_operator_list
  64                           |

  65  simple_expression : term adding_operator_list
  66                    | '-' term adding_operator_list

  67  adding_operator_list : adding_operator term adding_operator_list
  68                       |

  69  term : factor multiplying_operator_list

  70  multiplying_operator_list : multiplying_operator factor multiplying_operator_list
  71                            |

  72  factor : primary primary_list
  73         | NOT primary

  74  primary_list : STAR primary primary_list
  75               |

  76  primary : NUMBER
  77          | ID
  78          | '(' expression ')'

  79  boolean_operator : AND
  80                   | OR

  81  relational_operator : EQ
  82                      | NEQ
  83                      | LT
  84                      | LTE
  85                      | GT
  86                      | GTE

  87  adding_operator : '+'
  88                  | '-'

  89  multiplying_operator : '*'
  90                       | '/'

  91  optional_actual_parameter_part : '(' actual_parameter_part ')'

  92  actual_parameter_part : expression ',' actual_parameter_part
  93                        | expression

  94  exception_part : EXCEPTION exception_body
  95                 |

  96  exception_body : WHEN choice_sequence ARROW sequence_of_statements exception_body
  97                 | WHEN OTHERS ARROW sequence_of_statements
  98                 |

  99  choice_sequence : ID choice_sequence
 100                  | '|' ID choice_sequence
 101                  |

state 0
	$accept : . program $end  (0)

	PROCEDURE  shift 1
	.  error

	program  goto 2
	main_body  goto 3
	main_specification  goto 4


state 1
	main_specification : PROCEDURE . ID  (3)

	ID  shift 5
	.  error


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : main_body .  (1)

	.  reduce 1


state 4
	main_body : main_specification . IS declarative_part_sequence BEG sequence_of_statements exception_part END ';'  (2)

	IS  shift 6
	.  error


state 5
	main_specification : PROCEDURE ID .  (3)

	.  reduce 3


state 6
	main_body : main_specification IS . declarative_part_sequence BEG sequence_of_statements exception_part END ';'  (2)
	declarative_part : .  (21)

	ID  shift 7
	TYPE  shift 8
	BEG  reduce 21
	PROCEDURE  reduce 21

	declarative_part_sequence  goto 9
	identifier_list  goto 10
	declarative_part  goto 11
	decl  goto 12
	array_type_definition  goto 13
	record_type_definition  goto 14
	name_type_definition  goto 15
	variable_declaration  goto 16
	constant_variable_declaration  goto 17
	exception_type_definition  goto 18


state 7
	identifier_list : ID .  (10)
	identifier_list : ID . ',' identifier_list  (11)

	','  shift 19
	':'  reduce 10


state 8
	array_type_definition : TYPE . ID IS ARRAY '(' constant_option DOTDOT constant_option ')' OF type_name  (28)
	record_type_definition : TYPE . ID IS RECORD component_list ENDREC  (32)
	name_type_definition : TYPE . ID IS RANGE constant_option DOTDOT constant_option  (36)

	ID  shift 20
	.  error


state 9
	main_body : main_specification IS declarative_part_sequence . BEG sequence_of_statements exception_part END ';'  (2)

	BEG  shift 21
	.  error


state 10
	variable_declaration : identifier_list . ':' type_name  (35)
	constant_variable_declaration : identifier_list . ':' CONSTANT DERIVES constant_expression  (37)
	exception_type_definition : identifier_list . ':' EXCEPTION  (38)

	':'  shift 22
	.  error


state 11
	declarative_part_sequence : declarative_part . procedure_sequence  (17)
	procedure_sequence : .  (19)

	PROCEDURE  shift 23
	BEG  reduce 19

	procedure_body  goto 24
	procedure_specification  goto 25
	procedure_sequence  goto 26


state 12
	declarative_part : decl . ';' declarative_part  (20)

	';'  shift 27
	.  error


state 13
	decl : array_type_definition .  (22)

	.  reduce 22


state 14
	decl : record_type_definition .  (23)

	.  reduce 23


state 15
	decl : name_type_definition .  (24)

	.  reduce 24


state 16
	decl : variable_declaration .  (25)

	.  reduce 25


state 17
	decl : constant_variable_declaration .  (26)

	.  reduce 26


state 18
	decl : exception_type_definition .  (27)

	.  reduce 27


state 19
	identifier_list : ID ',' . identifier_list  (11)

	ID  shift 7
	.  error

	identifier_list  goto 28


state 20
	array_type_definition : TYPE ID . IS ARRAY '(' constant_option DOTDOT constant_option ')' OF type_name  (28)
	record_type_definition : TYPE ID . IS RECORD component_list ENDREC  (32)
	name_type_definition : TYPE ID . IS RANGE constant_option DOTDOT constant_option  (36)

	IS  shift 29
	.  error


state 21
	main_body : main_specification IS declarative_part_sequence BEG . sequence_of_statements exception_part END ';'  (2)
	sequence_of_statements : .  (40)

	ID  shift 30
	NUMBER  shift 31
	RAISE  shift 32
	NULLWORD  shift 33
	LOOP  shift 34
	IF  shift 35
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	END  reduce 40
	EXCEPTION  reduce 40

	sequence_of_statements  goto 39
	statement_type  goto 40
	assignment_statement  goto 41
	procedure_call  goto 42
	loop_statement  goto 43
	if_statement  goto 44
	raise_exception  goto 45
	expression  goto 46
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 22
	variable_declaration : identifier_list ':' . type_name  (35)
	constant_variable_declaration : identifier_list ':' . CONSTANT DERIVES constant_expression  (37)
	exception_type_definition : identifier_list ':' . EXCEPTION  (38)

	ID  shift 52
	CONSTANT  shift 53
	EXCEPTION  shift 54
	.  error

	type_name  goto 55


state 23
	procedure_specification : PROCEDURE . ID formal_parameter_part  (5)

	ID  shift 56
	.  error


state 24
	procedure_sequence : procedure_body . procedure_sequence  (18)
	procedure_sequence : .  (19)

	PROCEDURE  shift 23
	BEG  reduce 19

	procedure_body  goto 24
	procedure_specification  goto 25
	procedure_sequence  goto 57


state 25
	procedure_body : procedure_specification . IS declarative_part_sequence BEG sequence_of_statements exception_part END ';'  (4)

	IS  shift 58
	.  error


state 26
	declarative_part_sequence : declarative_part procedure_sequence .  (17)

	.  reduce 17


state 27
	declarative_part : decl ';' . declarative_part  (20)
	declarative_part : .  (21)

	ID  shift 7
	TYPE  shift 8
	BEG  reduce 21
	PROCEDURE  reduce 21

	identifier_list  goto 10
	declarative_part  goto 59
	decl  goto 12
	array_type_definition  goto 13
	record_type_definition  goto 14
	name_type_definition  goto 15
	variable_declaration  goto 16
	constant_variable_declaration  goto 17
	exception_type_definition  goto 18


state 28
	identifier_list : ID ',' identifier_list .  (11)

	.  reduce 11


state 29
	array_type_definition : TYPE ID IS . ARRAY '(' constant_option DOTDOT constant_option ')' OF type_name  (28)
	record_type_definition : TYPE ID IS . RECORD component_list ENDREC  (32)
	name_type_definition : TYPE ID IS . RANGE constant_option DOTDOT constant_option  (36)

	ARRAY  shift 60
	RECORD  shift 61
	RANGE  shift 62
	.  error


state 30
	assignment_statement : ID . DERIVES expression  (48)
	procedure_call : ID . optional_actual_parameter_part  (49)
	primary : ID .  (77)

	DERIVES  shift 63
	'('  shift 64
	STAR  reduce 77
	AND  reduce 77
	OR  reduce 77
	EQ  reduce 77
	NEQ  reduce 77
	LT  reduce 77
	GT  reduce 77
	GTE  reduce 77
	LTE  reduce 77
	';'  reduce 77
	'-'  reduce 77
	'+'  reduce 77
	'*'  reduce 77
	'/'  reduce 77

	optional_actual_parameter_part  goto 65


state 31
	primary : NUMBER .  (76)

	.  reduce 76


state 32
	raise_exception : RAISE . ID  (58)

	ID  shift 66
	.  error


state 33
	statement_type : NULLWORD . ';'  (41)

	';'  shift 67
	.  error


state 34
	loop_statement : LOOP . sequence_of_statements loop_exit ENDLOOP  (50)
	sequence_of_statements : .  (40)

	ID  shift 30
	NUMBER  shift 31
	RAISE  shift 32
	NULLWORD  shift 33
	LOOP  shift 34
	IF  shift 35
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	EXIT  reduce 40
	ENDLOOP  reduce 40
	EXITWHEN  reduce 40

	sequence_of_statements  goto 68
	statement_type  goto 40
	assignment_statement  goto 41
	procedure_call  goto 42
	loop_statement  goto 43
	if_statement  goto 44
	raise_exception  goto 45
	expression  goto 46
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 35
	if_statement : IF . expression THEN sequence_of_statements if_more ENDIF  (54)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	expression  goto 70
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 36
	factor : NOT . primary  (73)

	ID  shift 69
	NUMBER  shift 31
	'('  shift 37
	.  error

	primary  goto 71


state 37
	primary : '(' . expression ')'  (78)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	expression  goto 72
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 38
	simple_expression : '-' . term adding_operator_list  (66)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	.  error

	term  goto 73
	factor  goto 50
	primary  goto 51


state 39
	main_body : main_specification IS declarative_part_sequence BEG sequence_of_statements . exception_part END ';'  (2)
	exception_part : .  (95)

	EXCEPTION  shift 74
	END  reduce 95

	exception_part  goto 75


state 40
	sequence_of_statements : statement_type . sequence_of_statements  (39)
	sequence_of_statements : .  (40)

	ID  shift 30
	NUMBER  shift 31
	RAISE  shift 32
	NULLWORD  shift 33
	LOOP  shift 34
	IF  shift 35
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	END  reduce 40
	EXCEPTION  reduce 40
	ELSEIF  reduce 40
	ELSE  reduce 40
	EXIT  reduce 40
	WHEN  reduce 40
	ENDIF  reduce 40
	ENDLOOP  reduce 40
	EXITWHEN  reduce 40

	sequence_of_statements  goto 76
	statement_type  goto 40
	assignment_statement  goto 41
	procedure_call  goto 42
	loop_statement  goto 43
	if_statement  goto 44
	raise_exception  goto 45
	expression  goto 46
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 41
	statement_type : assignment_statement . ';'  (42)

	';'  shift 77
	.  error


state 42
	statement_type : procedure_call . ';'  (43)

	';'  shift 78
	.  error


state 43
	statement_type : loop_statement . ';'  (44)

	';'  shift 79
	.  error


state 44
	statement_type : if_statement . ';'  (45)

	';'  shift 80
	.  error


state 45
	statement_type : raise_exception . ';'  (46)

	';'  shift 81
	.  error


state 46
	statement_type : expression . ';'  (47)

	';'  shift 82
	.  error


state 47
	expression : relation . boolean_operator_list  (59)
	boolean_operator_list : .  (61)

	AND  shift 83
	OR  shift 84
	THEN  reduce 61
	';'  reduce 61
	')'  reduce 61
	','  reduce 61

	boolean_operator_list  goto 85
	boolean_operator  goto 86


state 48
	relation : simple_expression . relational_operator_list  (62)
	relational_operator_list : .  (64)

	EQ  shift 87
	NEQ  shift 88
	LT  shift 89
	GT  shift 90
	GTE  shift 91
	LTE  shift 92
	THEN  reduce 64
	AND  reduce 64
	OR  reduce 64
	';'  reduce 64
	')'  reduce 64
	','  reduce 64

	relational_operator_list  goto 93
	relational_operator  goto 94


state 49
	simple_expression : term . adding_operator_list  (65)
	adding_operator_list : .  (68)

	'-'  shift 95
	'+'  shift 96
	THEN  reduce 68
	AND  reduce 68
	OR  reduce 68
	EQ  reduce 68
	NEQ  reduce 68
	LT  reduce 68
	GT  reduce 68
	GTE  reduce 68
	LTE  reduce 68
	';'  reduce 68
	')'  reduce 68
	','  reduce 68

	adding_operator_list  goto 97
	adding_operator  goto 98


state 50
	term : factor . multiplying_operator_list  (69)
	multiplying_operator_list : .  (71)

	'*'  shift 99
	'/'  shift 100
	THEN  reduce 71
	AND  reduce 71
	OR  reduce 71
	EQ  reduce 71
	NEQ  reduce 71
	LT  reduce 71
	GT  reduce 71
	GTE  reduce 71
	LTE  reduce 71
	';'  reduce 71
	')'  reduce 71
	','  reduce 71
	'-'  reduce 71
	'+'  reduce 71

	multiplying_operator_list  goto 101
	multiplying_operator  goto 102


state 51
	factor : primary . primary_list  (72)
	primary_list : .  (75)

	STAR  shift 103
	THEN  reduce 75
	AND  reduce 75
	OR  reduce 75
	EQ  reduce 75
	NEQ  reduce 75
	LT  reduce 75
	GT  reduce 75
	GTE  reduce 75
	LTE  reduce 75
	';'  reduce 75
	')'  reduce 75
	','  reduce 75
	'-'  reduce 75
	'+'  reduce 75
	'*'  reduce 75
	'/'  reduce 75

	primary_list  goto 104


state 52
	type_name : ID .  (16)

	.  reduce 16


state 53
	constant_variable_declaration : identifier_list ':' CONSTANT . DERIVES constant_expression  (37)

	DERIVES  shift 105
	.  error


state 54
	exception_type_definition : identifier_list ':' EXCEPTION .  (38)

	.  reduce 38


state 55
	variable_declaration : identifier_list ':' type_name .  (35)

	.  reduce 35


state 56
	procedure_specification : PROCEDURE ID . formal_parameter_part  (5)
	formal_parameter_part : .  (7)

	'('  shift 106
	IS  reduce 7

	formal_parameter_part  goto 107


state 57
	procedure_sequence : procedure_body procedure_sequence .  (18)

	.  reduce 18


state 58
	procedure_body : procedure_specification IS . declarative_part_sequence BEG sequence_of_statements exception_part END ';'  (4)
	declarative_part : .  (21)

	ID  shift 7
	TYPE  shift 8
	BEG  reduce 21
	PROCEDURE  reduce 21

	declarative_part_sequence  goto 108
	identifier_list  goto 10
	declarative_part  goto 11
	decl  goto 12
	array_type_definition  goto 13
	record_type_definition  goto 14
	name_type_definition  goto 15
	variable_declaration  goto 16
	constant_variable_declaration  goto 17
	exception_type_definition  goto 18


state 59
	declarative_part : decl ';' declarative_part .  (20)

	.  reduce 20


state 60
	array_type_definition : TYPE ID IS ARRAY . '(' constant_option DOTDOT constant_option ')' OF type_name  (28)

	'('  shift 109
	.  error


state 61
	record_type_definition : TYPE ID IS RECORD . component_list ENDREC  (32)

	ID  shift 7
	.  error

	identifier_list  goto 110
	variable_declaration  goto 111
	component_list  goto 112


state 62
	name_type_definition : TYPE ID IS RANGE . constant_option DOTDOT constant_option  (36)

	ID  shift 113
	NUMBER  shift 114
	.  error

	constant_option  goto 115


state 63
	assignment_statement : ID DERIVES . expression  (48)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	expression  goto 116
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 64
	optional_actual_parameter_part : '(' . actual_parameter_part ')'  (91)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	expression  goto 117
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51
	actual_parameter_part  goto 118


state 65
	procedure_call : ID optional_actual_parameter_part .  (49)

	.  reduce 49


state 66
	raise_exception : RAISE ID .  (58)

	.  reduce 58


state 67
	statement_type : NULLWORD ';' .  (41)

	.  reduce 41


state 68
	loop_statement : LOOP sequence_of_statements . loop_exit ENDLOOP  (50)
	loop_exit : .  (53)

	EXIT  shift 119
	EXITWHEN  shift 120
	ENDLOOP  reduce 53

	loop_exit  goto 121


state 69
	primary : ID .  (77)

	.  reduce 77


state 70
	if_statement : IF expression . THEN sequence_of_statements if_more ENDIF  (54)

	THEN  shift 122
	.  error


state 71
	factor : NOT primary .  (73)

	.  reduce 73


state 72
	primary : '(' expression . ')'  (78)

	')'  shift 123
	.  error


state 73
	simple_expression : '-' term . adding_operator_list  (66)
	adding_operator_list : .  (68)

	'-'  shift 95
	'+'  shift 96
	THEN  reduce 68
	AND  reduce 68
	OR  reduce 68
	EQ  reduce 68
	NEQ  reduce 68
	LT  reduce 68
	GT  reduce 68
	GTE  reduce 68
	LTE  reduce 68
	';'  reduce 68
	')'  reduce 68
	','  reduce 68

	adding_operator_list  goto 124
	adding_operator  goto 98


state 74
	exception_part : EXCEPTION . exception_body  (94)
	exception_body : .  (98)

	WHEN  shift 125
	END  reduce 98

	exception_body  goto 126


state 75
	main_body : main_specification IS declarative_part_sequence BEG sequence_of_statements exception_part . END ';'  (2)

	END  shift 127
	.  error


state 76
	sequence_of_statements : statement_type sequence_of_statements .  (39)

	.  reduce 39


state 77
	statement_type : assignment_statement ';' .  (42)

	.  reduce 42


state 78
	statement_type : procedure_call ';' .  (43)

	.  reduce 43


state 79
	statement_type : loop_statement ';' .  (44)

	.  reduce 44


state 80
	statement_type : if_statement ';' .  (45)

	.  reduce 45


state 81
	statement_type : raise_exception ';' .  (46)

	.  reduce 46


state 82
	statement_type : expression ';' .  (47)

	.  reduce 47


state 83
	boolean_operator : AND .  (79)

	.  reduce 79


state 84
	boolean_operator : OR .  (80)

	.  reduce 80


state 85
	expression : relation boolean_operator_list .  (59)

	.  reduce 59


state 86
	boolean_operator_list : boolean_operator . relation boolean_operator_list  (60)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	relation  goto 128
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 87
	relational_operator : EQ .  (81)

	.  reduce 81


state 88
	relational_operator : NEQ .  (82)

	.  reduce 82


state 89
	relational_operator : LT .  (83)

	.  reduce 83


state 90
	relational_operator : GT .  (85)

	.  reduce 85


state 91
	relational_operator : GTE .  (86)

	.  reduce 86


state 92
	relational_operator : LTE .  (84)

	.  reduce 84


state 93
	relation : simple_expression relational_operator_list .  (62)

	.  reduce 62


state 94
	relational_operator_list : relational_operator . simple_expression relational_operator_list  (63)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	simple_expression  goto 129
	term  goto 49
	factor  goto 50
	primary  goto 51


state 95
	adding_operator : '-' .  (88)

	.  reduce 88


state 96
	adding_operator : '+' .  (87)

	.  reduce 87


state 97
	simple_expression : term adding_operator_list .  (65)

	.  reduce 65


state 98
	adding_operator_list : adding_operator . term adding_operator_list  (67)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	.  error

	term  goto 130
	factor  goto 50
	primary  goto 51


state 99
	multiplying_operator : '*' .  (89)

	.  reduce 89


state 100
	multiplying_operator : '/' .  (90)

	.  reduce 90


state 101
	term : factor multiplying_operator_list .  (69)

	.  reduce 69


state 102
	multiplying_operator_list : multiplying_operator . factor multiplying_operator_list  (70)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	.  error

	factor  goto 131
	primary  goto 51


state 103
	primary_list : STAR . primary primary_list  (74)

	ID  shift 69
	NUMBER  shift 31
	'('  shift 37
	.  error

	primary  goto 132


state 104
	factor : primary primary_list .  (72)

	.  reduce 72


state 105
	constant_variable_declaration : identifier_list ':' CONSTANT DERIVES . constant_expression  (37)

	NUMBER  shift 133
	.  error

	constant_expression  goto 134


state 106
	formal_parameter_part : '(' . parameters ')'  (6)

	ID  shift 7
	.  error

	parameters  goto 135
	identifier_list  goto 136


state 107
	procedure_specification : PROCEDURE ID formal_parameter_part .  (5)

	.  reduce 5


state 108
	procedure_body : procedure_specification IS declarative_part_sequence . BEG sequence_of_statements exception_part END ';'  (4)

	BEG  shift 137
	.  error


state 109
	array_type_definition : TYPE ID IS ARRAY '(' . constant_option DOTDOT constant_option ')' OF type_name  (28)

	ID  shift 113
	NUMBER  shift 114
	.  error

	constant_option  goto 138


state 110
	variable_declaration : identifier_list . ':' type_name  (35)

	':'  shift 139
	.  error


state 111
	component_list : variable_declaration . ';' component_list  (33)
	component_list : variable_declaration . ';'  (34)

	';'  shift 140
	.  error


state 112
	record_type_definition : TYPE ID IS RECORD component_list . ENDREC  (32)

	ENDREC  shift 141
	.  error


state 113
	constant_option : ID .  (29)

	.  reduce 29


state 114
	constant_option : NUMBER .  (30)

	.  reduce 30


state 115
	name_type_definition : TYPE ID IS RANGE constant_option . DOTDOT constant_option  (36)

	DOTDOT  shift 142
	.  error


state 116
	assignment_statement : ID DERIVES expression .  (48)

	.  reduce 48


state 117
	actual_parameter_part : expression . ',' actual_parameter_part  (92)
	actual_parameter_part : expression .  (93)

	','  shift 143
	')'  reduce 93


state 118
	optional_actual_parameter_part : '(' actual_parameter_part . ')'  (91)

	')'  shift 144
	.  error


state 119
	loop_exit : EXIT . ';'  (51)

	';'  shift 145
	.  error


state 120
	loop_exit : EXITWHEN . expression ';'  (52)

	ID  shift 69
	NUMBER  shift 31
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	.  error

	expression  goto 146
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 121
	loop_statement : LOOP sequence_of_statements loop_exit . ENDLOOP  (50)

	ENDLOOP  shift 147
	.  error


state 122
	if_statement : IF expression THEN . sequence_of_statements if_more ENDIF  (54)
	sequence_of_statements : .  (40)

	ID  shift 30
	NUMBER  shift 31
	RAISE  shift 32
	NULLWORD  shift 33
	LOOP  shift 34
	IF  shift 35
	NOT  shift 36
	'('  shift 37
	'-'  shift 38
	ELSEIF  reduce 40
	ELSE  reduce 40
	ENDIF  reduce 40

	sequence_of_statements  goto 148
	statement_type  goto 40
	assignment_statement  goto 41
	procedure_call  goto 42
	loop_statement  goto 43
	if_statement  goto 44
	raise_exception  goto 45
	expression  goto 46
	relation  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50
	primary  goto 51


state 123
	primary : '(' expression ')' .  (78)

	.  reduce 78


state 124
	simple_expression : '-' term adding_operator_list .  (66)

	.  reduce 66


state 125
	exception_body : WHEN . choice_sequence ARROW sequence_of_statements exception_body  (96)
	exception_body : WHEN . OTHERS ARROW sequence_of_statements  (97)
	choice_sequence : .  (101)

	ID  shift 149
	OTHERS  shift 150
	'|'  shift 151
	ARROW  reduce 101

	choice_sequence  goto 152


state 126
	exception_part : EXCEPTION exception_body .  (94)

	.  reduce 94


state 127
	main_body : main_specification IS declarative_part_sequence BEG sequence_of_statements exception_part END . ';'  (2)

	';'  shift 153
	.  error


state 128
	boolean_operator_list : boolean_operator relation . boolean_operator_list  (60)
	boolean_operator_list : .  (61)

	AND  shift 83
	OR  shift 84
	THEN  reduce 61
	';'  reduce 61
	')'  reduce 61
	','  reduce 61

	boolean_operator_list  goto 154
	boolean_operator  goto 86


state 129
	relational_operator_list : relational_operator simple_expression . relational_operator_list  (63)
	relational_operator_list : .  (64)

	EQ  shift 87
	NEQ  shift 88
	LT  shift 89
	GT  shift 90
	GTE  shift 91
	LTE  shift 92
	THEN  reduce 64
	AND  reduce 64
	OR  reduce 64
	';'  reduce 64
	')'  reduce 64
	','  reduce 64

	relational_operator_list  goto 155
	relational_operator  goto 94

